--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3290,15 +3290,18 @@ input, select, textarea {
 					border: 0;
 					border-radius: 8px;
 					box-shadow: inset 0 0 0 1px transparent;
+					color: #000000
 				}
 
 					#nav ul li a:hover {
 						background-color: rgba(222, 222, 222, 0.25);
+						color: #000000
 					}
 
 					#nav ul li a.active {
 						background-color: #ffffff;
 						box-shadow: none;
+						color: #000000
 					}
 
 		#nav.alt {
